# Mepalize

./: .dockerignore  README.md  run-local.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  activate.sh  data_ingestion_pipeline.py  docker-compose.yml  import_data_to_mongodb.py  ingest_optimized_data.py  ingest_qdrant_only.py  metadata_config.py  migrate_to_qdrant_cloud.py  migrate_to_qdrant_cloud.sh  pyproject.toml  pyrightconfig.json  qdrant_data_manager.py  requirements.txt  run_data_ingestion.py  run_import.py
backend/data/: Cultural Notes - All Languages.csv  FRi - Localization Ref For AI - All ref - FR.csv  FRi - Localization Ref For AI - MCR-1293.csv  FRi - Localization Ref For AI - Style Guide.csv  FRi - Localization Ref For AI - Writing Traits.csv  Glossary - Entertainment - EN.csv  Glossary - Entertainment - FR.csv  Glossary - Entertainment - JA.csv  Glossary - Game - Casual - EN.csv  Glossary - Game - Casual - FR.csv  Glossary - Game - Casual - JA.csv  Glossary - Game - Music - EN.csv  Glossary - Game - Music - FR.csv  Glossary - Game - Music - JA.csv  JPi - Localization Ref For AI - Translation Memory.csv  Optimized_Glossary_Music-Game_JA_v3.csv  Optimized_TM_Music-Game_JA_v3.csv
backend/src/: main.py
backend/src/config/: __init__.py  config.py
backend/src/core/: exceptions.py  logger.py  model_manager.py  types.py
backend/src/database/: chroma_client.py  chroma_connection.py  mongodb_client.py  qdrant_client.py
backend/src/prompts/: __init__.py  translation_prompt.txt
backend/src/services/: __init__.py  chroma_retrieval_service.py  context_service.py  data_preprocessing_service.py  gemini_ocr_service.py  gemini_service.py  hybrid_retrieval_service.py  langchain_orchestrator.py  ocr_service.py  prompt_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+13 files in other folders)
