[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi==0.115.0",
    "fuzzywuzzy>=0.18.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langdetect>=1.0.9",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.5.0",
    "nltk>=3.8",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "fastembed>=0.2.0",
    "google-genai>=0.1.0",
    "textblob>=0.19.0",
    "torch>=2.8.0",
    "transformers>=4.55.3",
    "ulid-py==1.1.0",
    "uvicorn[standard]==0.30.6",
    "rapidocr-onnxruntime>=1.3.26",
    "opencv-python-headless>=4.5.1.48",
    "Pillow>=10.4.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "docling>=2.51.0",
]
