[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core FastAPI and web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart>=0.0.20",
    
    # Database clients
    "chromadb>=0.4.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    
    # LangChain for orchestration
    "langchain-core>=0.1.0",
    
    # Image processing
    "Pillow>=10.4.0",
    
    # Configuration and utilities
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "ulid-py==1.1.0",
    "google-genai>=0.1.0",
]
